listings depth also shows working likes/favorites

--- a/views/partials/listings-favorites.ejs
+++ b/views/partials/listings-favorites.ejs
@@ -22,7 +22,7 @@
         </section>
       </a>
       <aside class="lo-save-listing">
-        <i class="fa-solid fa-heart active"></i>
+        <i class="fa-solid fa-heart liked"></i>
       </aside>
     </li>
     <% }); %>
