fixed font weight on log out link to match others

--- a/views/partials/logout-link.ejs
+++ b/views/partials/logout-link.ejs
@@ -2,6 +2,6 @@
   <button type="submit">
     <i class="fa-solid fa-sign-in"></i>
     <br />
-    Log Out
+    <span>Log Out</span>
   </button>
 </form>
