--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -37,7 +37,8 @@ body.lo-body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  min-height: auto;
+  height: auto;
+  min-height: 100vh;
   background-color: var(--bg-secondary-color);
   padding: 0;
   margin: 0;
@@ -282,7 +283,7 @@ button.nav-btn.fa-sign-in {
 
 .lo-body .lo-section-main {
   position: relative;
-  height: auto;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
