favorites container shows count # of favorites.

--- a/views/partials/listings-favorites.ejs
+++ b/views/partials/listings-favorites.ejs
@@ -1,23 +1,26 @@
 <section class="lo-favorites-list">
-  <h5>Favorites</h5>
-    <% let toShow = "" %> 
-    <% let sortedSchools = [...schools] %> 
-    <% sortedSchools.sort((a, b) => { %> 
-    <%  if (a.name < b.name) { %> 
-    <%    return -1;%> 
-    <%  } %> 
-    <% }); %> 
-    <% let likedSchools = sortedSchools.filter(school => { %>
-    <% console.log(school.is_liked) %>
-    <% return school.is_liked; %>
-    <% }); %>
-    <% console.log(likedSchools) %>
-    <% if (likedSchools.length === 0) { %>
-      <section class="lo-favorites-list-empty">
-        <h3>No favorites yet</h3>
-        <p>Keep track of the programs you're interested in by clicking the <span> <i class="fa-solid fa-heart"></i> </span> icon. </p>
-      </section>
-    <% } %>
+  <% let toShow = "" %> <% let sortedSchools = [...schools] %> <%
+  sortedSchools.sort((a, b) => { %> <% if (a.name < b.name) { %> <% return -1;%>
+  <% } %> <% }); %> <% let likedSchools = sortedSchools.filter(school => { %> <%
+  return school.is_liked; %> <% }); %> <% let howMany = likedSchools.length; %>
+  <h5>
+    <span>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
+    </span>
+    <span>&#183;</span>
+    Favorites
+    <span>&#183;</span>
+    <span><%= howMany %></span>
+  </h5>
+  <% if (likedSchools.length === 0) { %>
+  <section class="lo-favorites-list-empty">
+    <h3>No favorites yet</h3>
+    <p>
+      Keep track of the programs you're interested in by clicking the
+      <span> <i class="fa-solid fa-heart"></i> </span> icon.
+    </p>
+  </section>
+  <% } %>
   <ul>
     <% likedSchools.forEach(school => { %>
     <li>
