add class name for styling

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -32,7 +32,7 @@
           <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
         </aside>
       </div>
-      <div class="lo-container">
+      <div class="lo-container lo-container-profile-favorites">
         <!-- Favorites List -->
         <%- include('../partials/listings-favorites'); %>
         <aside class="lo-dot-menu">
