used path property to set aria-current showing where user is in navigation. Removed old bulky logic that was previously doing the same

--- a/views/partials/login-link.ejs
+++ b/views/partials/login-link.ejs
@@ -1,12 +1,4 @@
-<% let log = "false" %>
-<% if (typeof title != 'undefined') { %>
-
-<%  if ((title.toLowerCase().includes("log")) || (title.toLowerCase().includes("register"))) { %>
-<%    log = "page" %>
-<%  } %>
-<% } %>
-
-<a class="navitem nav-link" aria-current="<%=log%>" href="/login">
+<a class="navitem nav-link" aria-current="<%= path==="/login" ? "page" : "false" %>" href="/login">
   <i class="navicon4 fa-solid fa-sign-out"></i>
   <span>Log in</span>
 </a>
