--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,3 @@
-<% let log = "false" %> <% let home = "false" %> <% let subscribe = "false" %>
-<% let resources = "false" %> <% let contact = "false" %> <% let profile =
-"false" %> <% if (typeof title != 'undefined') { %> <% if
-(title.toLowerCase().includes("home")) { %> <% home = "page" %> <% } %> <% if
-(title.toLowerCase().includes("subscribe")) { %> <% subscribe = "page" %> <% }
-%> <% if (title.toLowerCase().includes("resources")) { %> <% resources = "page"
-%> <% } %> <% if (title.toLowerCase().includes("contact")) { %> <% contact =
-"page" %> <% } %> <% if (title.toLowerCase().includes("profile")) { %> <%
-profile = "page" %> <% } %> <% } %>
-
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navitem navbar-brand" href="/">
@@ -39,7 +29,7 @@ profile = "page" %> <% } %> <% } %>
     >
       <ul class="navlist navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="<%=home%>" href="/">
+          <a class="nav-link" aria-current="<%= path==="/" ? "page" : "false" %>" href="/">
             <i class="navicon1 fa-solid fa-house"></i>
             <span>Home</span>
           </a>
@@ -47,7 +37,7 @@ profile = "page" %> <% } %> <% } %>
         <li class="nav-item">
           <a
             class="navitem nav-link"
-            aria-current="<%=subscribe%>"
+            aria-current="<%= path==="/subscribe" ? "page" : "false" %>"
             href="/subscribe"
           >
             <i class="navicon2 fa-solid fa-bell"></i>
@@ -57,7 +47,7 @@ profile = "page" %> <% } %> <% } %>
         <li class="nav-item">
           <a
             class="navitem nav-link"
-            aria-current="<%=resources%>"
+            aria-current="<%= path==="/resources" ? "page" : "false" %>"
             href="/resources"
           >
             <i class="navicon3 fa-sharp fa-solid fa-book"></i>
@@ -67,7 +57,7 @@ profile = "page" %> <% } %> <% } %>
         <li class="nav-item">
           <a
             class="navitem nav-link"
-            aria-current="<%=contact%>"
+            aria-current="<%= path==="/contact" ? "page" : "false" %>"
             href="/contact"
           >
             <i class="navicon4 fa-solid fa-handshake"></i>
@@ -77,7 +67,7 @@ profile = "page" %> <% } %> <% } %>
         <li>
           <a
             class="navitem nav-link"
-            aria-current="<%=profile%>"
+            aria-current="<%= path==="/profile" ? "page" : "false" %>"
             href="/profile"
           >
             <i class="navicon4 fa-solid fa-user"></i>
