only show hearts/like buttons if the user is logged in

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -34,6 +34,7 @@
           </p>
         </section>
       </a>
+      <% if (isAuthenticated) { %>
       <aside class="lo-save-listing">
         <form action="/user-likes" method="POST">
           <input type="hidden" name="school_id" value= "<%= school._id %>" />
@@ -42,6 +43,7 @@
           </button>
         </form>
       </aside>
+      <% } %>
     </li>
     <% }); %>
   </ul>
