added class to body for styling

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main">
+    <section class="lo-section-main lo-section-main-tall">
       <h3>Kickstart a career in a skilled trade.</h3>
       <div class="lo-container lo-container-small">
         <span class="lo-error-message">
