--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main">
+    <section class="lo-section-main lo-section-main-tall">
       <h3>Looking to kickstart a career in a skilled trade? Join BOE.</h3>
       <div class="lo-container lo-container-small">
         <form class="form" action="/register" method="POST">
