--- a/views/pages/success.ejs
+++ b/views/pages/success.ejs
@@ -3,10 +3,10 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="lo-body">
+  <body class="lo-body lo-body-pop">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main">
+    <section class="lo-section-main lo-section-main-tall">
       <div class="lo-container lo-container-alert">
         <section class="lo-container-img-side">
           <div class="lo-img-wrapper lo-success">
