hearts only show if logged in

--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -47,7 +47,7 @@
 
       <% if (school.premiumMembership) { %> <%- include('./application-premium',
       {school: school}); %> <% } else { %> <%- include('./application', {school:
-      school}); %> <% } %>
+      school}); %> <% } %> <% if (isAuthenticated) { %>
       <aside class="lo-save-listing">
         <form action="/user-likes" method="POST">
           <input type="hidden" name="school_id" value="<%= school._id %>" />
@@ -58,6 +58,7 @@
           </button>
         </form>
       </aside>
+      <% } %>
     </li>
     <% }); %>
   </ul>
