show user error/info message when redirecting due to not-signed-in-user trying to click a heart

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,10 +6,20 @@
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
     <section class="lo-section-main lo-section-main-tall">
-      <h3>Kickstart a career in a skilled trade.</h3>
+      <h3>
+        <% if (info.length !== 0){ %> 
+          <%=info%> 
+        <% } else { %>
+          Kickstart a career in a skilled trade.
+        <% } %> 
+      </h3>
       <div class="lo-container lo-container-small">
         <span class="lo-error-message">
-          <% if (messages.error) { %> <%=messages.error %> <% } %>
+          <% if (messages.error) { %> <%=messages.error %> <% } %> 
+          <% if (info){ %> 
+            <%=info%> 
+          <% } %>
+         <% console.log(info.length); %>
         </span>
         <form action="/login" method="POST">
           <label for="email">Email</label>
