--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -3,22 +3,16 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="lo-body lo-body-pop">
+  <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main lo-section-main-tall">
-      <div class="lo-container lo-container-alert">
-        <section class="lo-container-img-side">
-          <div class="lo-img-wrapper lo-failure">
-            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-          </div>
-        </section>
-        <section class="lo-container-text-side">
-          <h1>Oops, nothing here...</h1>
-          <h2>404 Page Not Found</h2>
-          <p>Uh oh, we can't seem to find the page you're looking for.</p>
-        </section>
-      </div>
+    <section class="lo-section-main lo-section-404">
+      <h1>
+        Oops, <br />
+        <span class="lo-text-gradient">nothing</span> here...
+      </h1>
+      <h2 class="lo-text-uppercase">404 <span>&#183;</span> Page Not Found</h2>
+      <p>Uh oh, we can't seem to find the page you're looking for.</p>
     </section>
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
