--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -12,6 +12,7 @@
   --color-a: #a5243d;
   --color-b: #134074;
   --color-c: #a05482;
+  --logo-color-disabled: rgba(67, 126, 88, 0.1);
 
   --lo-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
@@ -611,7 +612,7 @@ section.lo-section-half .lo-in-depth-list li a:hover,
 .list-group-item-action:focus,
 .list-group-item-action:hover,
 section.lo-favorites-list li a:hover {
-  background-color: rgba(67, 126, 88, 0.1);
+  background-color: var(--logo-color-disabled);
 }
 
 section.lo-section-half .lo-basic-list li .lo-list-text-side,
@@ -722,10 +723,11 @@ input#searchInput[type="text"] {
 
 #lo-search-empty {
   display: none;
-  background-color: var(--bg-secondary-color);
   width: 95%;
   text-align: center;
   padding: 16px 16px 0;
+  /* background-color: var(--bg-secondary-color);
+  background-color: rgba(67, 126, 88, 0.1); */
 }
 
 section.lo-search-wrapper p {
@@ -873,6 +875,9 @@ section.lo-favorites-list-empty {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 25px 0;
+  /* background-color: var(--bg-secondary-color);
+  background-color: rgba(67, 126, 88, 0.1); */
 }
 
 section.lo-favorites-list-empty p {
