--- a/views/partials/listings-favorites.ejs
+++ b/views/partials/listings-favorites.ejs
@@ -8,9 +8,8 @@
       <i class="fa fa-heart-o" aria-hidden="true"></i>
     </span>
     <span>&#183;</span>
-    Favorites
-    <% if (likedSchools.length !== 0) { %>
-      <span><span>&#183; </span><%= howMany %></span>
+    Favorites <% if (likedSchools.length !== 0) { %>
+    <span><span>&#183; </span><%= howMany %></span>
     <% } %>
   </h5>
   <% if (likedSchools.length === 0) { %>
@@ -25,7 +24,7 @@
   <ul>
     <% likedSchools.forEach(school => { %>
     <li>
-      <a class="list-group-item">
+      <a class="list-group-item" href="<%=school.siteUrl%>">
         <section class="lo-list-img-side">
           <div class="lo-logo-wrapper">
             <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
