cursor should be pointer when hovering over clickable favorite listing

--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -868,6 +868,10 @@ section.lo-search-wrapper p {
   cursor: text;
 }
 
+.lo-favorites-list a {
+  cursor: pointer;
+}
+
 section.lo-favorites-list-empty {
   height: 90%;
   display: flex;
