--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -14,13 +14,11 @@
     <% let sortedSchools = [...schools] %> <% sortedSchools.sort((a, b) => { %>
     <% if (a.name < b.name) { %> <% return -1; %> <% } %> <% }); %> <%
     sortedSchools.forEach(function(school, i) { %>
-    <li class="listentry">
-      <a
-        class="list-group-item list-group-item-action"
-        id="id-<%= i %>"
-        href="#item-<%= i %>"
-        // onclick="showInDepthInfo()"
-      >
+    <li 
+      class="listentry" 
+      data-id=<%= school._id %> 
+    >
+      <a class="list-group-item list-group-item-action">
         <section class="lo-list-img-side">
           <div class="lo-logo-wrapper">
             <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
