--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -516,6 +516,11 @@ button.nav-btn.fa-sign-in {
 }
 
 .lo-basic-list li,
+.lo-favorites-list li {
+  cursor: pointer;
+}
+
+.lo-basic-list li,
 .lo-in-depth-list li,
 .lo-favorites-list li {
   list-style: none;
@@ -723,9 +728,10 @@ input#searchInput[type="text"] {
 
 #lo-search-empty {
   display: none;
+  position: relative;
   width: 95%;
   text-align: center;
-  padding: 16px 16px 0;
+  padding: 25px 16px 0;
   /* background-color: var(--bg-secondary-color);
   background-color: rgba(67, 126, 88, 0.1); */
 }
@@ -866,10 +872,6 @@ section.lo-search-wrapper p {
   color: var(--text-color-min);
   font-weight: unset;
   cursor: text;
-}
-
-.lo-favorites-list a {
-  cursor: pointer;
 }
 
 section.lo-favorites-list-empty {
@@ -1037,6 +1039,10 @@ section.lo-favorites-list-empty p {
     background-color: #ffffff;
     z-index: 9;
     padding: 15px 15px 5px 15px;
+  }
+
+  #lo-search-empty {
+    top: 25%;
   }
 
   .lo-basic-list ul#lo-basic-list {
