--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,4 +1,4 @@
-<div class="lo-container lo-container-carousel">
+<!-- <div> -->
   <h3 class="carouselheader">Testimonials</h3>
   <div class="carousel">
     <button class="carousel__button carousel__button--left is-hidden">
@@ -99,4 +99,4 @@
     <button class="carousel__indicator"></button>
     <button class="carousel__indicator"></button>
   </div>
-</div>
+<!-- </div> -->
