added back home link. changed style

--- a/views/pages/failure.ejs
+++ b/views/pages/failure.ejs
@@ -3,10 +3,10 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="lo-body lo-body-pop">
+  <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main lo-section-main-tall">
+    <section class="lo-section-main">
       <div class="lo-container lo-container-alert">
         <section class="lo-container-img-side">
           <div class="lo-img-wrapper lo-failure">
@@ -18,6 +18,9 @@
           <p>Apologies for the inconvenience. Please try again.</p>
         </section>
       </div>
+      <a class="nav-link" href="/">
+        <span>Return home</span>
+      </a>
     </section>
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
