--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -40,6 +40,12 @@ body.lo-body {
   margin: 0;
 }
 
+.lo-section-main a {
+  color: var(--logo-color);
+  font-size: 16px;
+  text-decoration: underline;
+}
+
 /* ------------------------------ NAV ------------------------------ */
 
 .lo-body nav * {
